vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/enum-no-repr.stderr
error: `H5Type` can only be derived for enums with explicit representation
 --> tests/compile-fail/enum-no-repr.rs:6:6
  |
6 | enum Foo {
  |      ^^^
